<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_dat_info"
        android:layout_below="@+id/dat_info_title"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_excle">

        <TextView
            android:id="@+id/tv_point_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:text="@string/point_name"
            android:lines="1"
            android:textSize="12sp"/>

        <View
            android:id="@+id/view_1"
            android:layout_width="0.5dp"
            android:layout_height="22dp"
            android:background="@color/hui"
            android:layout_marginLeft="90dp"/>

        <TextView
            android:id="@+id/tv_pointX"
            android:layout_toRightOf="@+id/view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:lines="1"
            android:text="@string/pointX"
            android:textSize="12sp"/>

        <View
            android:id="@+id/view_2"
            android:layout_width="0.5dp"
            android:layout_height="22dp"
            android:background="@color/hui"
            android:layout_marginLeft="180dp"/>

        <TextView
            android:id="@+id/tv_pointY"
            android:layout_toRightOf="@+id/view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:lines="1"
            android:text="@string/pointY"
            android:textSize="12sp"/>

        <View
            android:id="@+id/view_3"
            android:layout_width="0.5dp"
            android:layout_height="22dp"
            android:background="@color/hui"
            android:layout_marginLeft="270dp"/>

        <TextView
            android:id="@+id/tv_pointH"
            android:layout_toRightOf="@+id/view_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:paddingBottom="3dp"
            android:paddingTop="3dp"
            android:lines="1"
            android:text="@string/pointH"
            android:textSize="12sp"/>

    </RelativeLayout>

</LinearLayout>
