<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_measure"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.ccqzy.activitys.MeasureActivity">

    <include
        android:id="@+id/title_measure"
        layout="@layout/layout_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:id="@+id/btn_list"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/title_measure"
        android:background="@drawable/bg_text">

        <LinearLayout
            android:id="@+id/ll_point_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tv_pointX1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="模板值X:"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_pointY1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="模板值Y:"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_pointH1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="模板值H:"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_point_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_toRightOf="@+id/ll_point_name"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_pointX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lines="1"
                android:text=""
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_pointY"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lines="1"
                android:text=""
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_pointH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:lines="1"
                android:text=""
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_measure_btn"
            android:layout_below="@+id/ll_point_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:background="@drawable/bg_selector_rl"
            android:text="@string/measure"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tv_update_btn"
            android:layout_below="@+id/tv_measure_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_selector_rl"
            android:text="@string/stop"
            android:textSize="22sp"/>

    </RelativeLayout>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_measure"
        android:layout_toLeftOf="@+id/btn_list"
        android:background="@color/white">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rl_dat_info"
                android:layout_marginLeft="1dp"
                android:layout_width="500dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_excle">

                <TextView
                    android:id="@+id/tv_point_name"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/point_name"
                    android:textSize="16sp"/>

                <View
                    android:id="@+id/view_1"
                    android:layout_width="0.5dp"
                    android:layout_height="31dp"
                    android:background="@color/hui"
                    android:layout_toRightOf="@+id/tv_point_name"/>

                <TextView
                    android:id="@+id/tv_pointX12"
                    android:layout_toRightOf="@+id/view_1"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/pointX"
                    android:textSize="16sp"/>

                <View
                    android:id="@+id/view_2"
                    android:layout_width="0.5dp"
                    android:layout_height="31dp"
                    android:background="@color/hui"
                    android:layout_toRightOf="@+id/tv_pointX12"/>

                <TextView
                    android:id="@+id/tv_pointY12"
                    android:layout_toRightOf="@+id/view_2"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lines="1"
                    android:text="@string/pointY"
                    android:textSize="16sp"/>

                <View
                    android:id="@+id/view_3"
                    android:layout_width="0.5dp"
                    android:layout_height="31dp"
                    android:background="@color/hui"
                   android:layout_toRightOf="@+id/tv_pointY12"/>

                <TextView
                    android:id="@+id/tv_pointH12"
                    android:layout_toRightOf="@+id/view_3"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                   android:gravity="center"
                    android:lines="1"
                    android:text="@string/pointH"
                    android:textSize="16sp"/>

            </RelativeLayout>


            <ListView
                android:id="@+id/lv_dat_info"
                android:layout_below="@+id/rl_dat_info"
                android:layout_width="501dp"
                android:layout_height="match_parent">
            </ListView>

        </RelativeLayout>

    </HorizontalScrollView>


</RelativeLayout>
